Added a features and gallery section.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,48 @@
             <section class="section-main">
                 <div class="main__text-box">
                     <h1 class="heading-primary">
-                        <span class="heading-primary--main">High-speed train</span><br>
-                        <span class="heading-primary--sub">Next step to your adventure</span>
+                        <span class="heading-primary--main">Highspeed &mdash; train</span><br>
+                        <span class="heading-primary--sub">Next step in your adventure</span>
                         
                     </h1>
+                </div>
+            </section>
+            <section class="section-features">
+                <h2 class="heading-secondary">
+                    A speedy arrival
+                </h2>
+                <div class="features-showcase">
+                    <div class="features-showcase__description-box">
+                        <p class="features-showcase__description">Sit back and relax. We will be arriving at your destination at a moments notice!</p>
+                    </div>
+                    <div class="features-showcase__features">
+                        <h3 class="heading-tertiary">Arriving in 90 minutes</h3>
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                    <div class="features-showcase__features">
+                        <h3 class="heading-tertiary">0 stops to our destination</h3>
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                    <div class="features-showcase__features">
+                        <h3 class="heading-tertiary">A Conformtable Ride</h3>
+                        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                </div>               
+            </section>
+            <section class="section-gallery">
+                <div class="gallery">
+                    <div class="gallery__box"> <img src="/img/lu1187490788-GH9fV3tHvfY-unsplash.jpg" alt="photo" class="gallery__img--1"></div>
+                    <div class="gallery__box"> <img src="/img/lu1187490788-GH9fV3tHvfY-unsplash.jpg" alt="photo" class="gallery__img--1"></div>
+                    <div class="gallery__box"> <img src="/img/lu1187490788-GH9fV3tHvfY-unsplash.jpg" alt="photo" class="gallery__img--1"></div>
+                </div>
+            </section>
+            <section class="section-trips">
+                <div class="trips__container">
+                    <div class="trips__card">
+                        <div class="trips__card-header"></div>
+                        <div class="trips__card-details"></div>
+                        <div class="trip__card-footer"></div>
+                    </div>
                 </div>
             </section>
            
