Setting up html content for section-departures

--- a/index.html
+++ b/index.html
@@ -75,34 +75,98 @@
             <section class="section-departures">
                 <h2 class="heading-secondary">Departing</h2>
                 <div class="departures__container">
-                    <div class="departures__card">
-                        <div class="departures__card-header">
-                            <div class="depatures__card-img">
-                                <div class="depatures__card-overlay"> &nbsp;</div>
-                                <img src="#" alt="card image" class="depatures__card-picture">
+                    <div class="card">
+                        <div class="card__header">
+                            <div class="card__img">
+                                <div class="card__img-overlay"> &nbsp;</div>
+                                <img src="#" alt="card picture" class="card__img-picture">
                             </div>
                             <h3 class="heading-tertirary">
                                 To Houston
                             </h3>
-                        
                         </div>
-                        <div class="departures__card-details"></div>
-                        <div class="departures__card-footer"></div>
+                        <div class="card__details">
+                            <h4 class="card__sub-heading">
+                                We will arive in 90 minutes
+                            </h4>
+                            <p class="card__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <div class="card__data">
+                                <svg class="card__icon">
+                                    <use xlink:href="img/sprite.svg#icon-location"></use>
+                                </svg>
+                                <span>Houston, Texas</span>
+                            </div>
+                            <div class="card__data">
+                                <svg class="card__icon">
+                                    <use xlink:href="img/sprite.svg#icon-flag"></use>
+                                </svg>
+                                <span>Dallas, Texas</span>
+                            </div>
+                        </div>
+                        <div class="card__footer">
+                            <p>
+                                <span class="card__footer-value">
+                                    $100
+                                </span>
+                                <span class="card__footer-text">per person</span>
+                            </p>
+                            <p>
+                                <span class="card__footer-value">
+                                    4.5
+                                </span>
+                                <span class="card__footer-text">rating</span>
+                            </p>
+                            <a href="#" class="btn btn--details">Details</a>
+                        </div>
                     </div>
 
-                    <div class="departures__card">
-                        <div class="departures__card-header">
-                            <div class="depatures__card-img">
-                                <div class="depatures__card-overlay"> &nbsp;</div>
-                                <img src="#" alt="card image" class="depatures__card-picture">
+                    <div class="card">
+                        <div class="card__header">
+                            <div class="card__img">
+                                <div class="card__img-overlay"> &nbsp;</div>
+                                <img src="#" alt="card picture" class="card__img-picture">
                             </div>
                             <h3 class="heading-tertirary">
                                 To Dallas
                             </h3>
-                        
                         </div>
-                        <div class="departures__card-details"></div>
-                        <div class="departures__card-footer"></div>
+                        <div class="card__details">
+                            <h4 class="card__sub-heading">
+                                We will arive in 90 minutes
+                            </h4>
+                            <p class="card__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <div class="card__data">
+                                <svg class="card__icon">
+                                    <use xlink:href="img/sprite.svg#icon-location"></use>
+                                </svg>
+                                <span>Dallas, Texas</span>
+                            </div>
+                            <div class="card__data">
+                                <svg class="card__icon">
+                                    <use xlink:href="img/sprite.svg#icon-flag"></use>
+                                </svg>
+                                <span>Houston, Texas</span>
+                            </div>
+                        </div>
+                        <div class="card__footer">
+                            <p>
+                                <span class="card__footer-value">
+                                    $100
+                                </span>
+                                <span class="card__footer-text">per person</span>
+                            </p>
+                            <p>
+                                <span class="card__footer-value">
+                                    4.5
+                                </span>
+                                <span class="card__footer-text">rating</span>
+                            </p>
+                            <a href="#" class="btn btn--details">Details</a>
+                        </div>
                     </div>
 
                 </div>
