completed departure section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="section-main">
                 <div class="main__text-box">
                     <h1 class="heading-primary">
-                        <span class="heading-primary--main">Highspeed &mdash; train</span><br>
+                        <span class="heading-primary--main">High &mdash; speed train</span><br>
                         <span class="heading-primary--sub">Next step in your adventure</span>
                         
                     </h1>
@@ -79,10 +79,10 @@
                         <div class="card__header">
                             <div class="card__img">
                                 <div class="card__img-overlay"> &nbsp;</div>
-                                <img src="#" alt="card picture" class="card__img-picture">
+                                <img src="img/houston.jpg" alt="card picture" class="card__img-picture">
                             </div>
-                            <h3 class="heading-tertirary">
-                                To Houston
+                            <h3 class="heading-tertiary card__main-heading">
+                                <span>heading To Houston</span>
                             </h3>
                         </div>
                         <div class="card__details">
@@ -112,7 +112,7 @@
                                 </span>
                                 <span class="card__footer-text">per person</span>
                             </p>
-                            <p>
+                            <p class="card__ratings">
                                 <span class="card__footer-value">
                                     4.5
                                 </span>
@@ -126,10 +126,10 @@
                         <div class="card__header">
                             <div class="card__img">
                                 <div class="card__img-overlay"> &nbsp;</div>
-                                <img src="#" alt="card picture" class="card__img-picture">
+                                <img src="img/dallas.jpg" alt="card picture" class="card__img-picture">
                             </div>
-                            <h3 class="heading-tertirary">
-                                To Dallas
+                            <h3 class="heading-tertiary card__main-heading">
+                                <span>heading To Dallas</span>
                             </h3>
                         </div>
                         <div class="card__details">
@@ -159,7 +159,7 @@
                                 </span>
                                 <span class="card__footer-text">per person</span>
                             </p>
-                            <p>
+                            <p class="card__ratings">
                                 <span class="card__footer-value">
                                     4.5
                                 </span>
