--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header class="header">
 
                 <nav class="nav nav--trips">
-                    <a href="#" class="nav__link">All departures</a>
+                    <a href="/index.html" class="nav__link">All departures</a>
                 </nav>
 
                 <div class="header__logo-box">
@@ -96,13 +96,13 @@
                                 <svg class="card__icon">
                                     <use xlink:href="img/sprite.svg#icon-location"></use>
                                 </svg>
-                                <span>Houston, Texas</span>
+                                <span>Dallas, Texas</span>
                             </div>
                             <div class="card__data">
                                 <svg class="card__icon">
                                     <use xlink:href="img/sprite.svg#icon-flag"></use>
                                 </svg>
-                                <span>Dallas, Texas</span>
+                                <span>Houston, Texas</span>
                             </div>
                         </div>
                         <div class="card__footer">
@@ -118,7 +118,7 @@
                                 </span>
                                 <span class="card__footer-text">rating</span>
                             </p>
-                            <a href="#" class="btn btn--details">Details</a>
+                            <a href="/departure.html" class="btn btn--details">Details</a>
                         </div>
                     </div>
 
@@ -143,13 +143,13 @@
                                 <svg class="card__icon">
                                     <use xlink:href="img/sprite.svg#icon-location"></use>
                                 </svg>
-                                <span>Dallas, Texas</span>
+                                <span>Houston, Texas</span>
                             </div>
                             <div class="card__data">
                                 <svg class="card__icon">
                                     <use xlink:href="img/sprite.svg#icon-flag"></use>
                                 </svg>
-                                <span>Houston, Texas</span>
+                                <span>Dallas, Texas</span>
                             </div>
                         </div>
                         <div class="card__footer">
