--- a/departure.html
+++ b/departure.html
@@ -21,13 +21,13 @@
                 </nav>
 
                 <div class="header__logo-box">
-                    <img src="img/favicon-32x32.png" alt="Logo" class="header__logo">
+                    <img src="img/logo-white.png" alt="Logo" class="header__logo">
                 </div>
 
     
                 <nav class="nav nav--user">
-                  <a href="#" class="nav__link nav__link--logIn">Log in</a>
-                  <a href="#" class="nav__link nav__link--signUp">Sign up</a>
+                  <a href="/login.html" class="nav__link nav__link--logIn">Log in</a>
+                  <a href="/signUp.html" class="nav__link nav__link--signUp">Sign up</a>
                   <!-- <img src="img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="User photo" class="nav__user-photo">
                   <span>Jorge</span> -->
     
