--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     
                 <nav class="nav nav--user">
-                  <a href="#" class="nav__link nav__link--logIn">Log in</a>
-                  <a href="#" class="nav__link nav__link--signUp">Sign up</a>
+                  <a href="/login.html" class="nav__link nav__link--logIn">Log in</a>
+                  <a href="/signUp.html" class="nav__link nav__link--signUp">Sign up</a>
                   <!-- <img src="img/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="User photo" class="nav__user-photo">
                   <span>Jorge</span> -->
     
