--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -33,6 +33,27 @@
     
                 </nav>
             </header>
+
+            <main class="main">
+                <div class="form-box forgotPass-form">
+                    <h2 class="forgotPass-form__heading form__heading">
+                       Reset your password
+                    </h2>
+                    <p class="forgotPass-form__text">
+                        Enter your accounts email to receive password reset email
+                    </p>
+                    <form action="" class="form form--login">
+                        <div class="form__group">
+                            <label for="email" class="form__label"> Email Address</label>
+                            <input type="email" id="email" class="form__input", placeholder="you@example.com", required>
+                        </div>
+                        <div class="form__group">
+                            <button class="btn btn--blue">Send password reset email</button>
+                        </div>
+
+                    </form>
+                </div>
+            </main>
      
 
             <footer class="footer">
