--- a/signUp.html
+++ b/signUp.html
@@ -34,7 +34,34 @@
                 </nav>
             </header>
  
-
+            <main class="main">
+                <div class="form-box login-form">
+                    <h2 class="login-form__heading form__heading">
+                        Sign Up
+                    </h2>
+                    <form action="" class="form form--login">
+                        <div class="form__group">
+                            <label for="name" class="form__label"> Name</label>
+                            <input type="text" id="name" class="form__input", placeholder="your name", required>
+                        </div>
+                        <div class="form__group">
+                            <label for="email" class="form__label"> Email Address</label>
+                            <input type="email" id="email" class="form__input", placeholder="you@example.com", required>
+                        </div>
+                        <div class="form__group">
+                            <label for="password" class="form__label">Password</label>
+                            <input type="password" id="password" class="form__input", placeholder='••••••••', required, minlength="8">
+                        </div>
+                        <div class="form__group">
+                            <label for="passwordConfirm" class="form__label">Confirm Password</label>
+                            <input type="password" id="passwordConfirm" class="form__input", placeholder='••••••••', required, minlength="8">
+                        </div>
+                        <div class="form__group">
+                            <button class="btn btn--logIn">SIGN UP</button>
+                        </div>
+                    </form>
+                </div>
+            </main>
             <footer class="footer">
                 <div class="footer__logo">
                     <img src="/img/logo-primary-color.png" alt="My logo" class="footer__logo-img">
