cleaning up wording

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     </div>
                     <div class="features-showcase__features">
-                        <h3 class="heading-tertiary">A Conformtable Ride</h3>
+                        <h3 class="heading-tertiary">A Comfortable Ride</h3>
                         <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                     </div>
                 </div>               
